--- a/UNRVLD/src/components/Carousel/Carousel.scss
+++ b/UNRVLD/src/components/Carousel/Carousel.scss
@@ -1,85 +1,86 @@
-.slider {
-    padding: 15px;
+.carousel {
+  padding: 15px;
 
-    @media (min-width: 992px) {
-        padding: 50px;
-    }
-
+  @media (min-width: 992px) {
+    padding: 50px;
+  }
+  .slider {
     .slider-container {
-        display: flex;
-        overflow: hidden;
+      display: flex;
+      overflow: hidden;
 
-        .slide-track {
-            display: flex;
-            column-gap: 20px;
+      .slide-track {
+        display: flex;
+        column-gap: 20px;
+
+        @media (min-width: 992px) {
+          column-gap: 50px;
+        }
+
+        .slide {
+          height: 500px;
+          flex: 0 0 60%;
+          position: relative;
+          background-size: cover;
+          background-position: 35%;
+          color: #000;
+          padding: 10px;
+          border-radius: 16px;
+
+          @media (min-width: 992px) {
+            flex: 0 0 31%;
+            height: 600px;
+            background-position: center left;
+          }
+
+          &.active {
+            + .slide {
+              margin-top: 30px;
+            }
 
             @media (min-width: 992px) {
-                column-gap: 50px;
+              margin-top: 100px;
+
+              + .slide {
+                margin-top: unset;
+              }
+            }
+          }
+
+          .slide-text {
+            padding: 30px 0 50px 30px;
+
+            .heading {
+              text-transform: uppercase;
+              font-size: 24px;
+              font-weight: 700;
             }
 
-            .slide {
-                height: 500px;
-                flex: 0 0 60%;
-                position: relative;
-                background-size: cover;
-                background-position: 35%;
-                color: #000;
-                padding: 10px;
-                border-radius: 16px;
-
-                @media (min-width: 992px) {
-                    flex: 0 0 31%;
-                    height: 600px;
-                    background-position: center left;
-                }
-
-                &.active {
-                    + .slide {
-                        margin-top: 30px;
-                    }
-
-                    @media (min-width: 992px) {
-                        margin-top: 100px;
-
-                        + .slide {
-                            margin-top: unset;
-                        }
-                    }
-                }
-
-                .slide-text {
-                    padding: 30px 0 50px 30px;
-
-                    .heading {
-                        text-transform: uppercase;
-                        font-size: 24px;
-                        font-weight: 700;
-                    }
-
-                    .price {
-                        font-size: 14px;
-                    }
-                }
+            .price {
+              font-size: 14px;
             }
+          }
         }
+      }
     }
     .carousel-dots {
-        text-align: center;
-        margin-top: 10px;
+      text-align: center;
+      margin-top: 10px;
 
-        .dot {
-            height: 2px;
-            width: 30px;
-            background-color: #999999;
-            display: inline-block;
-            margin: 0 5px;
-            cursor: pointer;
-        }
+      .dot {
+        height: 2px;
+        width: 30px;
+        background-color: #999999;
+        display: inline-block;
+        margin: 0 5px;
+        cursor: pointer;
+      }
 
-        .dot {
-            &.active {
-                background-color: #000000;
-            }
+      .dot {
+        &.active {
+          background-color: #000000;
         }
+      }
     }
+  }
 }
